samples/_failures_safe/1761669524_5e0dca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67e248ae.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_67e248ae.c:173:16: error: expected ‘,’ or ‘;’ at end of input
  173 |         struct GraphEdge *edge = node
      |                ^~~~~~~~~
./samples/SAFE/__tmp_67e248ae.c:173:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67e248ae.c:173:16: error: expected declaration or statement at end of input
